net/sdk/network/Azure.ResourceManager.Network/tests/SessionRecords/NetworkInterfaceTests/NetworkInterfaceNetworkSecurityGroupTest[2018-11-01]Async.json
{
  "Entries": [
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c?api-version=**",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "traceparent": "00-5ecf39e0966ca691312c92f74a4dc21b-d2baeb1eb1a6e57a-00",
        "User-Agent": "azsdk-net-ResourceManager/1.6.0 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "bab49992664289ed5c36209bc86e0d0d",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "748",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:30:29 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-correlation-request-id": "340790c7-0448-44c7-9b4e-457927a087f6",
        "x-ms-ratelimit-remaining-subscription-reads": "11080",
        "x-ms-request-id": "340790c7-0448-44c7-9b4e-457927a087f6",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T153029Z:340790c7-0448-44c7-9b4e-457927a087f6"
      },
      "ResponseBody": {
        "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c",
        "authorizationSource": "RoleBased",
        "managedByTenants": [],
        "tags": {
          "TagKey-9823": "TagValue-1254",
          "TagKey-3481": "TagValue-320",
          "TagKey-4926": "TagValue-1187",
          "TagKey-751": "TagValue-3921",
          "TagKey-1866": "TagValue-8559",
          "TagKey-3094": "TagValue-9190",
          "TagKey-2449": "TagValue-9",
          "TagKey-8379": "TagValue-164",
          "TagKey-7470": "TagValue-2205",
          "TagKey-4236": "TagValue-3698",
          "TagKey-5316": "TagValue-2725"
        },
        "subscriptionId": "db1ab6f0-4769-4b27-930e-01e2ef9c123c",
        "tenantId": "72f988bf-86f1-41af-91ab-2d7cd011db47",
        "displayName": ".NET Mgmt SDK Test with TTL = 1 Day",
        "state": "Enabled",
        "subscriptionPolicies": {
          "locationPlacementId": "Internal_2014-09-01",
          "quotaId": "Internal_2014-09-01",
          "spendingLimit": "Off"
        }
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourcegroups/csmrg4015?api-version=**",
      "RequestMethod": "PUT",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "Content-Length": "21",
        "Content-Type": "application/json",
        "traceparent": "00-3f6169e9ecddb1773cc1f5adf9852aaf-e1b766a5b75fc9ac-00",
        "User-Agent": "azsdk-net-ResourceManager/1.6.0 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "998d25e68ab90f850d3b2370ee8bc560",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": {
        "location": "westus"
      },
      "StatusCode": 201,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "215",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:30:29 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-correlation-request-id": "d79ab4c0-8f96-4938-82b8-1909e722f260",
        "x-ms-ratelimit-remaining-subscription-writes": "963",
        "x-ms-request-id": "d79ab4c0-8f96-4938-82b8-1909e722f260",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T153030Z:d79ab4c0-8f96-4938-82b8-1909e722f260"
      },
      "ResponseBody": {
        "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg4015",
        "name": "csmrg4015",
        "type": "Microsoft.Resources/resourceGroups",
        "location": "westus",
        "properties": {
          "provisioningState": "Succeeded"
        }
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg4015/providers/Microsoft.Network/virtualNetworks/azsmnet8067?api-version=2023-02-01",
      "RequestMethod": "PUT",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "Content-Length": "220",
        "Content-Type": "application/json",
        "traceparent": "00-1179ead3272d0549a0aeeadbf0face24-281894857d64ffac-00",
        "User-Agent": "azsdk-net-ResourceManager.Network/1.3.0-alpha.20230627.1 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "f13ab4ffe324fa26e9094f5eee7bdc43",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": {
        "properties": {
          "addressSpace": {
            "addressPrefixes": [
              "10.0.0.0/16"
            ]
          },
          "dhcpOptions": {
            "dnsServers": [
              "10.1.1.1",
              "10.1.2.4"
            ]
          },
          "subnets": [
            {
              "properties": {
                "addressPrefix": "10.0.0.0/24"
              }
            }
          ]
        },
        "location": "westus"
      },
      "StatusCode": 201,
      "ResponseHeaders": {
        "Azure-AsyncNotification": "Enabled",
        "Azure-AsyncOperation": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/providers/Microsoft.Network/locations/westus/operations/a4cbae0a-e135-4184-9431-1ca88d48dae7?api-version=2023-02-01",
        "Cache-Control": "no-cache",
        "Content-Length": "1019",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:30:32 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Retry-After": "3",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "ac7ecb1b-fdbb-4b32-b2b0-19d0856daf99",
        "x-ms-client-request-id": "f13ab4ffe324fa26e9094f5eee7bdc43",
        "x-ms-correlation-request-id": "88f11faa-be1a-4e0b-8ae1-ab0cb82cf8cd",
        "x-ms-ratelimit-remaining-subscription-writes": "962",
        "x-ms-request-id": "a4cbae0a-e135-4184-9431-1ca88d48dae7",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T153032Z:88f11faa-be1a-4e0b-8ae1-ab0cb82cf8cd"
      },
      "ResponseBody": {
        "name": "azsmnet8067",
        "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg4015/providers/Microsoft.Network/virtualNetworks/azsmnet8067",
        "etag": "W/\"a66274c5-b736-47b2-a931-452e7e1af357\"",
        "type": "Microsoft.Network/virtualNetworks",
        "location": "westus",
        "properties": {
          "provisioningState": "Updating",
          "resourceGuid": "118a96c5-35e4-4d68-8b7b-fd6e56adec10",
          "addressSpace": {
            "addressPrefixes": [
              "10.0.0.0/16"
            ]
          },
          "dhcpOptions": {
            "dnsServers": [
              "10.1.1.1",
              "10.1.2.4"
            ]
          },
          "subnets": [
            {
              "name": "azsmnet1012",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg4015/providers/Microsoft.Network/virtualNetworks/azsmnet8067/subnets/azsmnet1012",
              "etag": "W/\"a66274c5-b736-47b2-a931-452e7e1af357\"",
              "properties": {
                "provisioningState": "Updating",
                "addressPrefix": "10.0.0.0/24",
                "delegations": [],
                "privateEndpointNetworkPolicies": "Disabled",
                "privateLinkServiceNetworkPolicies": "Enabled"
              },
              "type": "Microsoft.Network/virtualNetworks/subnets"
            }
          ],
          "virtualNetworkPeerings": [],
          "enableDdosProtection": false
        }
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/providers/Microsoft.Network/locations/westus/operations/a4cbae0a-e135-4184-9431-1ca88d48dae7?api-version=2023-02-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Authorization": "Sanitized",
        "traceparent": "00-1179ead3272d0549a0aeeadbf0face24-b9425d7419f7d2fc-00",
        "User-Agent": "azsdk-net-ResourceManager/1.6.0 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "314569a79bebd675638b2603ebc48172",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "23",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:30:32 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Retry-After": "10",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "30c67f1c-c20b-4869-8ed6-56235c2b8c93",
        "x-ms-client-request-id": "314569a79bebd675638b2603ebc48172",
        "x-ms-correlation-request-id": "b4636b42-05eb-4b74-97cf-a90e38eb22dc",
        "x-ms-ratelimit-remaining-subscription-reads": "11079",
        "x-ms-request-id": "fcc8794e-af89-4632-81cb-16bd747a427e",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T153032Z:b4636b42-05eb-4b74-97cf-a90e38eb22dc"
      },
      "ResponseBody": {
        "status": "InProgress"
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/providers/Microsoft.Network/locations/westus/operations/a4cbae0a-e135-4184-9431-1ca88d48dae7?api-version=2023-02-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Authorization": "Sanitized",
        "traceparent": "00-1179ead3272d0549a0aeeadbf0face24-a139806b456efd5d-00",
        "User-Agent": "azsdk-net-ResourceManager/1.6.0 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "933881af56e953757e0e270b757a9fae",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "22",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:30:42 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "f2ab9677-c90b-431d-bfa3-e73e27e7c6f9",
        "x-ms-client-request-id": "933881af56e953757e0e270b757a9fae",
        "x-ms-correlation-request-id": "4295cf71-db22-443a-8087-0b298a3189ec",
        "x-ms-ratelimit-remaining-subscription-reads": "11078",
        "x-ms-request-id": "f9523976-3252-4160-aeb4-404271409775",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T153043Z:4295cf71-db22-443a-8087-0b298a3189ec"
      },
      "ResponseBody": {
        "status": "Succeeded"
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg4015/providers/Microsoft.Network/virtualNetworks/azsmnet8067?api-version=2023-02-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Authorization": "Sanitized",
        "traceparent": "00-1179ead3272d0549a0aeeadbf0face24-4a4c707148be8075-00",
        "User-Agent": "azsdk-net-ResourceManager/1.6.0 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "85b7a355aa368b570a02aca384324004",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "1021",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:30:42 GMT",
        "ETag": "W/\"10d0bf27-4295-48a5-9551-4ea625205a72\"",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "a45f8064-9e05-4157-9725-03a7d80626a6",
        "x-ms-client-request-id": "85b7a355aa368b570a02aca384324004",
        "x-ms-correlation-request-id": "d8f744d7-c229-4928-81dc-a1bdc46d12a2",
        "x-ms-ratelimit-remaining-subscription-reads": "11077",
        "x-ms-request-id": "2eb35c54-7760-4ac9-aa05-191726553117",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T153043Z:d8f744d7-c229-4928-81dc-a1bdc46d12a2"
      },
      "ResponseBody": {
        "name": "azsmnet8067",
        "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg4015/providers/Microsoft.Network/virtualNetworks/azsmnet8067",
        "etag": "W/\"10d0bf27-4295-48a5-9551-4ea625205a72\"",
        "type": "Microsoft.Network/virtualNetworks",
        "location": "westus",
        "properties": {
          "provisioningState": "Succeeded",
          "resourceGuid": "118a96c5-35e4-4d68-8b7b-fd6e56adec10",
          "addressSpace": {
            "addressPrefixes": [
              "10.0.0.0/16"
            ]
          },
          "dhcpOptions": {
            "dnsServers": [
              "10.1.1.1",
              "10.1.2.4"
            ]
          },
          "subnets": [
            {
              "name": "azsmnet1012",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg4015/providers/Microsoft.Network/virtualNetworks/azsmnet8067/subnets/azsmnet1012",
              "etag": "W/\"10d0bf27-4295-48a5-9551-4ea625205a72\"",
              "properties": {
                "provisioningState": "Succeeded",
                "addressPrefix": "10.0.0.0/24",
                "delegations": [],
                "privateEndpointNetworkPolicies": "Disabled",
                "privateLinkServiceNetworkPolicies": "Enabled"
              },
              "type": "Microsoft.Network/virtualNetworks/subnets"
            }
          ],
          "virtualNetworkPeerings": [],
          "enableDdosProtection": false
        }
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg4015/providers/Microsoft.Network/networkSecurityGroups/azsmnet6427?api-version=2023-02-01",
      "RequestMethod": "PUT",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "Content-Length": "313",
        "Content-Type": "application/json",
        "traceparent": "00-4a09b57c3cac2d1ebf45dd9d80531cec-927b449e7eecc893-00",
        "User-Agent": "azsdk-net-ResourceManager.Network/1.3.0-alpha.20230627.1 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "d9fcfb97200251c2f3f1b3dd746960e8",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": {
        "properties": {
          "securityRules": [
            {
              "properties": {
                "description": "Test security rule",
                "protocol": "Tcp",
                "sourcePortRange": "655",
                "destinationPortRange": "123-3500",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 500,
                "direction": "Inbound"
              }
            }
          ]
        },
        "location": "westus"
      },
      "StatusCode": 201,
      "ResponseHeaders": {
        "Azure-AsyncNotification": "Enabled",
        "Azure-AsyncOperation": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/providers/Microsoft.Network/locations/westus/operations/277ffd30-d556-4289-aa0e-b06f25f99ee7?api-version=2023-02-01",
        "Cache-Control": "no-cache",
        "Content-Length": "5555",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:30:45 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Retry-After": "1",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "544d6483-6431-4d2e-bd15-5066490c6e06",
        "x-ms-client-request-id": "d9fcfb97200251c2f3f1b3dd746960e8",
        "x-ms-correlation-request-id": "eb28ad53-5825-47d9-8d24-35aebdf68528",
        "x-ms-ratelimit-remaining-subscription-writes": "961",
        "x-ms-request-id": "277ffd30-d556-4289-aa0e-b06f25f99ee7",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T153046Z:eb28ad53-5825-47d9-8d24-35aebdf68528"
      },
      "ResponseBody": {
        "name": "azsmnet6427",
        "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg4015/providers/Microsoft.Network/networkSecurityGroups/azsmnet6427",
        "etag": "W/\"ba132973-0e8d-4be4-bb53-7ef0879a4b76\"",
        "type": "Microsoft.Network/networkSecurityGroups",
        "location": "westus",
        "properties": {
          "provisioningState": "Updating",
          "resourceGuid": "dc9c3b25-a02f-4da5-a468-0db490dd234d",
          "securityRules": [
            {
              "name": "azsmnet2627",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg4015/providers/Microsoft.Network/networkSecurityGroups/azsmnet6427/securityRules/azsmnet2627",
              "etag": "W/\"ba132973-0e8d-4be4-bb53-7ef0879a4b76\"",
              "type": "Microsoft.Network/networkSecurityGroups/securityRules",
              "properties": {
                "provisioningState": "Updating",
                "description": "Test security rule",
                "protocol": "Tcp",
                "sourcePortRange": "655",
                "destinationPortRange": "123-3500",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 500,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            }
          ],
          "defaultSecurityRules": [
            {
              "name": "AllowVnetInBound",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg4015/providers/Microsoft.Network/networkSecurityGroups/azsmnet6427/defaultSecurityRules/AllowVnetInBound",
              "etag": "W/\"ba132973-0e8d-4be4-bb53-7ef0879a4b76\"",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Updating",
                "description": "Allow inbound traffic from all VMs in VNET",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "VirtualNetwork",
                "destinationAddressPrefix": "VirtualNetwork",
                "access": "Allow",
                "priority": 65000,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "AllowAzureLoadBalancerInBound",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg4015/providers/Microsoft.Network/networkSecurityGroups/azsmnet6427/defaultSecurityRules/AllowAzureLoadBalancerInBound",
              "etag": "W/\"ba132973-0e8d-4be4-bb53-7ef0879a4b76\"",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Updating",
                "description": "Allow inbound traffic from azure load balancer",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "AzureLoadBalancer",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 65001,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "DenyAllInBound",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg4015/providers/Microsoft.Network/networkSecurityGroups/azsmnet6427/defaultSecurityRules/DenyAllInBound",
              "etag": "W/\"ba132973-0e8d-4be4-bb53-7ef0879a4b76\"",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Updating",
                "description": "Deny all inbound traffic",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Deny",
                "priority": 65500,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "AllowVnetOutBound",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg4015/providers/Microsoft.Network/networkSecurityGroups/azsmnet6427/defaultSecurityRules/AllowVnetOutBound",
              "etag": "W/\"ba132973-0e8d-4be4-bb53-7ef0879a4b76\"",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Updating",
                "description": "Allow outbound traffic from all VMs to all VMs in VNET",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "VirtualNetwork",
                "destinationAddressPrefix": "VirtualNetwork",
                "access": "Allow",
                "priority": 65000,
                "direction": "Outbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "AllowInternetOutBound",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg4015/providers/Microsoft.Network/networkSecurityGroups/azsmnet6427/defaultSecurityRules/AllowInternetOutBound",
              "etag": "W/\"ba132973-0e8d-4be4-bb53-7ef0879a4b76\"",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Updating",
                "description": "Allow outbound traffic from all VMs to Internet",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "Internet",
                "access": "Allow",
                "priority": 65001,
                "direction": "Outbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "DenyAllOutBound",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg4015/providers/Microsoft.Network/networkSecurityGroups/azsmnet6427/defaultSecurityRules/DenyAllOutBound",
              "etag": "W/\"ba132973-0e8d-4be4-bb53-7ef0879a4b76\"",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Updating",
                "description": "Deny all outbound traffic",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Deny",
                "priority": 65500,
                "direction": "Outbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            }
          ]
        }
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/providers/Microsoft.Network/locations/westus/operations/277ffd30-d556-4289-aa0e-b06f25f99ee7?api-version=2023-02-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Authorization": "Sanitized",
        "traceparent": "00-4a09b57c3cac2d1ebf45dd9d80531cec-18e77d190fa968a8-00",
        "User-Agent": "azsdk-net-ResourceManager/1.6.0 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "7a7423cec67d34abe1669144f77a17a1",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "22",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:30:45 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "fc976220-f2d4-4400-a348-dd559506d32a",
        "x-ms-client-request-id": "7a7423cec67d34abe1669144f77a17a1",
        "x-ms-correlation-request-id": "a911f3cb-b9d3-4278-8d9a-148c7bf52ebe",
        "x-ms-ratelimit-remaining-subscription-reads": "11076",
        "x-ms-request-id": "040ab62c-daff-491f-bb8c-30ada69b6c09",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T153046Z:a911f3cb-b9d3-4278-8d9a-148c7bf52ebe"
      },
      "ResponseBody": {
        "status": "Succeeded"
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg4015/providers/Microsoft.Network/networkSecurityGroups/azsmnet6427?api-version=2023-02-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Authorization": "Sanitized",
        "traceparent": "00-4a09b57c3cac2d1ebf45dd9d80531cec-05597da58a44c760-00",
        "User-Agent": "azsdk-net-ResourceManager/1.6.0 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "0cb8c3a1f7849bf7bef7af5598daa721",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "5563",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:30:46 GMT",
        "ETag": "W/\"104bdcca-4712-4ae6-94b1-1c07d471f760\"",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "124ad33e-cb6b-49fe-933a-8de69ec847da",
        "x-ms-client-request-id": "0cb8c3a1f7849bf7bef7af5598daa721",
        "x-ms-correlation-request-id": "8cb41b83-74a7-4cec-bc61-f2a895574815",
        "x-ms-ratelimit-remaining-subscription-reads": "11075",
        "x-ms-request-id": "b41dec28-4222-443c-b852-10c88cf0773d",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T153047Z:8cb41b83-74a7-4cec-bc61-f2a895574815"
      },
      "ResponseBody": {
        "name": "azsmnet6427",
        "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg4015/providers/Microsoft.Network/networkSecurityGroups/azsmnet6427",
        "etag": "W/\"104bdcca-4712-4ae6-94b1-1c07d471f760\"",
        "type": "Microsoft.Network/networkSecurityGroups",
        "location": "westus",
        "properties": {
          "provisioningState": "Succeeded",
          "resourceGuid": "dc9c3b25-a02f-4da5-a468-0db490dd234d",
          "securityRules": [
            {
              "name": "azsmnet2627",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg4015/providers/Microsoft.Network/networkSecurityGroups/azsmnet6427/securityRules/azsmnet2627",
              "etag": "W/\"104bdcca-4712-4ae6-94b1-1c07d471f760\"",
              "type": "Microsoft.Network/networkSecurityGroups/securityRules",
              "properties": {
                "provisioningState": "Succeeded",
                "description": "Test security rule",
                "protocol": "Tcp",
                "sourcePortRange": "655",
                "destinationPortRange": "123-3500",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 500,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            }
          ],
          "defaultSecurityRules": [
            {
              "name": "AllowVnetInBound",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg4015/providers/Microsoft.Network/networkSecurityGroups/azsmnet6427/defaultSecurityRules/AllowVnetInBound",
              "etag": "W/\"104bdcca-4712-4ae6-94b1-1c07d471f760\"",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Succeeded",
                "description": "Allow inbound traffic from all VMs in VNET",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "VirtualNetwork",
                "destinationAddressPrefix": "VirtualNetwork",
                "access": "Allow",
                "priority": 65000,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "AllowAzureLoadBalancerInBound",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg4015/providers/Microsoft.Network/networkSecurityGroups/azsmnet6427/defaultSecurityRules/AllowAzureLoadBalancerInBound",
              "etag": "W/\"104bdcca-4712-4ae6-94b1-1c07d471f760\"",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Succeeded",
                "description": "Allow inbound traffic from azure load balancer",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "AzureLoadBalancer",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 65001,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "DenyAllInBound",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg4015/providers/Microsoft.Network/networkSecurityGroups/azsmnet6427/defaultSecurityRules/DenyAllInBound",
              "etag": "W/\"104bdcca-4712-4ae6-94b1-1c07d471f760\"",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Succeeded",
                "description": "Deny all inbound traffic",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Deny",
                "priority": 65500,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "AllowVnetOutBound",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg4015/providers/Microsoft.Network/networkSecurityGroups/azsmnet6427/defaultSecurityRules/AllowVnetOutBound",
              "etag": "W/\"104bdcca-4712-4ae6-94b1-1c07d471f760\"",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Succeeded",
                "description": "Allow outbound traffic from all VMs to all VMs in VNET",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "VirtualNetwork",
                "destinationAddressPrefix": "VirtualNetwork",
                "access": "Allow",
                "priority": 65000,
                "direction": "Outbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "AllowInternetOutBound",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg4015/providers/Microsoft.Network/networkSecurityGroups/azsmnet6427/defaultSecurityRules/AllowInternetOutBound",
              "etag": "W/\"104bdcca-4712-4ae6-94b1-1c07d471f760\"",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Succeeded",
                "description": "Allow outbound traffic from all VMs to Internet",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "Internet",
                "access": "Allow",
                "priority": 65001,
                "direction": "Outbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "DenyAllOutBound",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg4015/providers/Microsoft.Network/networkSecurityGroups/azsmnet6427/defaultSecurityRules/DenyAllOutBound",
              "etag": "W/\"104bdcca-4712-4ae6-94b1-1c07d471f760\"",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Succeeded",
                "description": "Deny all outbound traffic",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Deny",
                "priority": 65500,
                "direction": "Outbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            }
          ]
        }
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg4015/providers/Microsoft.Network/networkInterfaces/azsmnet2321?api-version=2018-11-01",
      "RequestMethod": "PUT",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "Content-Length": "1169",
        "Content-Type": "application/json",
        "traceparent": "00-32a5659399ae51f8d2164d23ea612b3a-27086c9e859b5bd5-00",
        "User-Agent": "azsdk-net-ResourceManager.Network/1.3.0-alpha.20230627.1 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "e5f5500f256a79cc67a76af70daf95e7",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": {
        "tags": {
          "key": "value"
        },
        "properties": {
          "networkSecurityGroup": {
            "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg4015/providers/Microsoft.Network/networkSecurityGroups/azsmnet6427",
            "location": "westus"
          },
          "ipConfigurations": [
            {
              "properties": {
                "privateIPAllocationMethod": "Dynamic",
                "subnet": {
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg4015/providers/Microsoft.Network/virtualNetworks/azsmnet8067/subnets/azsmnet1012"
                }
              }
            }
          ]
        },
        "location": "westus"
      },
      "StatusCode": 201,
      "ResponseHeaders": {
        "Azure-AsyncNotification": "Enabled",
        "Azure-AsyncOperation": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/providers/Microsoft.Network/locations/westus/operations/ee9543f6-80a8-4601-993d-17a777a57945?api-version=2018-11-01",
        "Cache-Control": "no-cache",
        "Content-Length": "1794",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:30:48 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "012b884f-b316-484a-bc03-28af537adc6e",
        "x-ms-client-request-id": "e5f5500f256a79cc67a76af70daf95e7",
        "x-ms-correlation-request-id": "db7ee3d4-7e6f-4399-a03f-de0916b270ff",
        "x-ms-ratelimit-remaining-subscription-writes": "960",
        "x-ms-request-id": "ee9543f6-80a8-4601-993d-17a777a57945",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T153049Z:db7ee3d4-7e6f-4399-a03f-de0916b270ff"
      },
      "ResponseBody": {
        "name": "azsmnet2321",
        "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg4015/providers/Microsoft.Network/networkInterfaces/azsmnet2321",
        "etag": "W/\"7f599b61-0c69-4868-9a4d-5c34a02a7591\"",
        "tags": {
          "key": "value"
        },
        "properties": {
          "provisioningState": "Succeeded",
          "resourceGuid": "ba19146f-fde4-4064-8aaa-80032d225cfb",
          "ipConfigurations": [
            {
              "name": "azsmnet6354",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg4015/providers/Microsoft.Network/networkInterfaces/azsmnet2321/ipConfigurations/azsmnet6354",
              "etag": "W/\"7f599b61-0c69-4868-9a4d-5c34a02a7591\"",
              "type": "Microsoft.Network/networkInterfaces/ipConfigurations",
              "properties": {
                "provisioningState": "Succeeded",
                "privateIPAddress": "10.0.0.4",
                "privateIPAllocationMethod": "Dynamic",
                "subnet": {
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg4015/providers/Microsoft.Network/virtualNetworks/azsmnet8067/subnets/azsmnet1012"
                },
                "primary": true,
                "privateIPAddressVersion": "IPv4"
              }
            }
          ],
          "dnsSettings": {
            "dnsServers": [],
            "appliedDnsServers": [],
            "internalDomainNameSuffix": "ywliuepegvue1c115vxfnlpmca.dx.internal.cloudapp.net"
          },
          "enableIPForwarding": false,
          "networkSecurityGroup": {
            "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg4015/providers/Microsoft.Network/networkSecurityGroups/azsmnet6427"
          },
          "hostedWorkloads": [],
          "tapConfigurations": []
        },
        "type": "Microsoft.Network/networkInterfaces",
        "location": "westus"
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/providers/Microsoft.Network/locations/westus/operations/ee9543f6-80a8-4601-993d-17a777a57945?api-version=2018-11-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Authorization": "Sanitized",
        "traceparent": "00-32a5659399ae51f8d2164d23ea612b3a-a5725e86e5b3ce76-00",
        "User-Agent": "azsdk-net-ResourceManager/1.6.0 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "c66a9022bcab9358400a904f30c6ea00",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "29",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:30:48 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "934801a3-59e5-4d9b-8b98-5ab767b27a2b",
        "x-ms-client-request-id": "c66a9022bcab9358400a904f30c6ea00",
        "x-ms-correlation-request-id": "8df11f9b-10d4-467b-8d3c-93334c23f783",
        "x-ms-ratelimit-remaining-subscription-reads": "11074",
        "x-ms-request-id": "992b2b1b-20e2-42b0-b99f-334f5aea1f29",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T153049Z:8df11f9b-10d4-467b-8d3c-93334c23f783"
      },
      "ResponseBody": {
        "status": "Succeeded"
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg4015/providers/Microsoft.Network/networkInterfaces/azsmnet2321?api-version=2018-11-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Authorization": "Sanitized",
        "traceparent": "00-32a5659399ae51f8d2164d23ea612b3a-481a1a84263323a3-00",
        "User-Agent": "azsdk-net-ResourceManager/1.6.0 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "c094b0c06008389e251c2ae40f75dd60",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "1794",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:30:49 GMT",
        "ETag": "W/\"7f599b61-0c69-4868-9a4d-5c34a02a7591\"",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "fcc88a65-99d1-4985-a4fb-0340855d8499",
        "x-ms-client-request-id": "c094b0c06008389e251c2ae40f75dd60",
        "x-ms-correlation-request-id": "1ce49722-8ac8-4a3a-bc21-0e549a5653aa",
        "x-ms-ratelimit-remaining-subscription-reads": "11073",
        "x-ms-request-id": "ee48a399-cbb9-4248-babb-f06942e25002",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T153050Z:1ce49722-8ac8-4a3a-bc21-0e549a5653aa"
      },
      "ResponseBody": {
        "name": "azsmnet2321",
        "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg4015/providers/Microsoft.Network/networkInterfaces/azsmnet2321",
        "etag": "W/\"7f599b61-0c69-4868-9a4d-5c34a02a7591\"",
        "tags": {
          "key": "value"
        },
        "properties": {
          "provisioningState": "Succeeded",
          "resourceGuid": "ba19146f-fde4-4064-8aaa-80032d225cfb",
          "ipConfigurations": [
            {
              "name": "azsmnet6354",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg4015/providers/Microsoft.Network/networkInterfaces/azsmnet2321/ipConfigurations/azsmnet6354",
              "etag": "W/\"7f599b61-0c69-4868-9a4d-5c34a02a7591\"",
              "type": "Microsoft.Network/networkInterfaces/ipConfigurations",
              "properties": {
                "provisioningState": "Succeeded",
                "privateIPAddress": "10.0.0.4",
                "privateIPAllocationMethod": "Dynamic",
                "subnet": {
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg4015/providers/Microsoft.Network/virtualNetworks/azsmnet8067/subnets/azsmnet1012"
                },
                "primary": true,
                "privateIPAddressVersion": "IPv4"
              }
            }
          ],
          "dnsSettings": {
            "dnsServers": [],
            "appliedDnsServers": [],
            "internalDomainNameSuffix": "ywliuepegvue1c115vxfnlpmca.dx.internal.cloudapp.net"
          },
          "enableIPForwarding": false,
          "networkSecurityGroup": {
            "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg4015/providers/Microsoft.Network/networkSecurityGroups/azsmnet6427"
          },
          "hostedWorkloads": [],
          "tapConfigurations": []
        },
        "type": "Microsoft.Network/networkInterfaces",
        "location": "westus"
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg4015/providers/Microsoft.Network/networkInterfaces/azsmnet2321?api-version=2018-11-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "traceparent": "00-67a782330a1caf31268980dbd7fdf044-c5030a6d988c17a8-00",
        "User-Agent": "azsdk-net-ResourceManager.Network/1.3.0-alpha.20230627.1 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "7dd5fae8ce44893c8e8681bc46dca7f4",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "1794",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:30:49 GMT",
        "ETag": "W/\"7f599b61-0c69-4868-9a4d-5c34a02a7591\"",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "dd426ece-8588-4094-b312-a1feae6ee495",
        "x-ms-client-request-id": "7dd5fae8ce44893c8e8681bc46dca7f4",
        "x-ms-correlation-request-id": "c01be6be-873f-41c8-9b43-346e172142ba",
        "x-ms-ratelimit-remaining-subscription-reads": "11072",
        "x-ms-request-id": "51eb007e-6436-4969-b040-48f38d200af2",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T153050Z:c01be6be-873f-41c8-9b43-346e172142ba"
      },
      "ResponseBody": {
        "name": "azsmnet2321",
        "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg4015/providers/Microsoft.Network/networkInterfaces/azsmnet2321",
        "etag": "W/\"7f599b61-0c69-4868-9a4d-5c34a02a7591\"",
        "tags": {
          "key": "value"
        },
        "properties": {
          "provisioningState": "Succeeded",
          "resourceGuid": "ba19146f-fde4-4064-8aaa-80032d225cfb",
          "ipConfigurations": [
            {
              "name": "azsmnet6354",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg4015/providers/Microsoft.Network/networkInterfaces/azsmnet2321/ipConfigurations/azsmnet6354",
              "etag": "W/\"7f599b61-0c69-4868-9a4d-5c34a02a7591\"",
              "type": "Microsoft.Network/networkInterfaces/ipConfigurations",
              "properties": {
                "provisioningState": "Succeeded",
                "privateIPAddress": "10.0.0.4",
                "privateIPAllocationMethod": "Dynamic",
                "subnet": {
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg4015/providers/Microsoft.Network/virtualNetworks/azsmnet8067/subnets/azsmnet1012"
                },
                "primary": true,
                "privateIPAddressVersion": "IPv4"
              }
            }
          ],
          "dnsSettings": {
            "dnsServers": [],
            "appliedDnsServers": [],
            "internalDomainNameSuffix": "ywliuepegvue1c115vxfnlpmca.dx.internal.cloudapp.net"
          },
          "enableIPForwarding": false,
          "networkSecurityGroup": {
            "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg4015/providers/Microsoft.Network/networkSecurityGroups/azsmnet6427"
          },
          "hostedWorkloads": [],
          "tapConfigurations": []
        },
        "type": "Microsoft.Network/networkInterfaces",
        "location": "westus"
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg4015/providers/Microsoft.Network/networkSecurityGroups/azsmnet6427?api-version=2023-02-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "traceparent": "00-8a2d385b9856f44e37ac6aaea7552ba5-e704a0967136470c-00",
        "User-Agent": "azsdk-net-ResourceManager.Network/1.3.0-alpha.20230627.1 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "eb95159bfd71c167f132a18e927383ca",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "5729",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:30:50 GMT",
        "ETag": "W/\"c4c30965-c03d-417f-98b6-dbde2f138ad5\"",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "46007d12-41ae-4a78-801f-8f270a6053c4",
        "x-ms-client-request-id": "eb95159bfd71c167f132a18e927383ca",
        "x-ms-correlation-request-id": "74e07080-9c2f-4664-bb47-38a77ffe84d9",
        "x-ms-ratelimit-remaining-subscription-reads": "11071",
        "x-ms-request-id": "984708a6-c57a-4406-a270-0958f5b6ca73",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T153051Z:74e07080-9c2f-4664-bb47-38a77ffe84d9"
      },
      "ResponseBody": {
        "name": "azsmnet6427",
        "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg4015/providers/Microsoft.Network/networkSecurityGroups/azsmnet6427",
        "etag": "W/\"c4c30965-c03d-417f-98b6-dbde2f138ad5\"",
        "type": "Microsoft.Network/networkSecurityGroups",
        "location": "westus",
        "properties": {
          "provisioningState": "Succeeded",
          "resourceGuid": "dc9c3b25-a02f-4da5-a468-0db490dd234d",
          "securityRules": [
            {
              "name": "azsmnet2627",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg4015/providers/Microsoft.Network/networkSecurityGroups/azsmnet6427/securityRules/azsmnet2627",
              "etag": "W/\"c4c30965-c03d-417f-98b6-dbde2f138ad5\"",
              "type": "Microsoft.Network/networkSecurityGroups/securityRules",
              "properties": {
                "provisioningState": "Succeeded",
                "description": "Test security rule",
                "protocol": "Tcp",
                "sourcePortRange": "655",
                "destinationPortRange": "123-3500",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 500,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            }
          ],
          "defaultSecurityRules": [
            {
              "name": "AllowVnetInBound",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg4015/providers/Microsoft.Network/networkSecurityGroups/azsmnet6427/defaultSecurityRules/AllowVnetInBound",
              "etag": "W/\"c4c30965-c03d-417f-98b6-dbde2f138ad5\"",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Succeeded",
                "description": "Allow inbound traffic from all VMs in VNET",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "VirtualNetwork",
                "destinationAddressPrefix": "VirtualNetwork",
                "access": "Allow",
                "priority": 65000,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "AllowAzureLoadBalancerInBound",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg4015/providers/Microsoft.Network/networkSecurityGroups/azsmnet6427/defaultSecurityRules/AllowAzureLoadBalancerInBound",
              "etag": "W/\"c4c30965-c03d-417f-98b6-dbde2f138ad5\"",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Succeeded",
                "description": "Allow inbound traffic from azure load balancer",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "AzureLoadBalancer",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 65001,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "DenyAllInBound",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg4015/providers/Microsoft.Network/networkSecurityGroups/azsmnet6427/defaultSecurityRules/DenyAllInBound",
              "etag": "W/\"c4c30965-c03d-417f-98b6-dbde2f138ad5\"",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Succeeded",
                "description": "Deny all inbound traffic",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Deny",
                "priority": 65500,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "AllowVnetOutBound",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg4015/providers/Microsoft.Network/networkSecurityGroups/azsmnet6427/defaultSecurityRules/AllowVnetOutBound",
              "etag": "W/\"c4c30965-c03d-417f-98b6-dbde2f138ad5\"",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Succeeded",
                "description": "Allow outbound traffic from all VMs to all VMs in VNET",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "VirtualNetwork",
                "destinationAddressPrefix": "VirtualNetwork",
                "access": "Allow",
                "priority": 65000,
                "direction": "Outbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "AllowInternetOutBound",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg4015/providers/Microsoft.Network/networkSecurityGroups/azsmnet6427/defaultSecurityRules/AllowInternetOutBound",
              "etag": "W/\"c4c30965-c03d-417f-98b6-dbde2f138ad5\"",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Succeeded",
                "description": "Allow outbound traffic from all VMs to Internet",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "Internet",
                "access": "Allow",
                "priority": 65001,
                "direction": "Outbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "DenyAllOutBound",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg4015/providers/Microsoft.Network/networkSecurityGroups/azsmnet6427/defaultSecurityRules/DenyAllOutBound",
              "etag": "W/\"c4c30965-c03d-417f-98b6-dbde2f138ad5\"",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Succeeded",
                "description": "Deny all outbound traffic",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Deny",
                "priority": 65500,
                "direction": "Outbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            }
          ],
          "networkInterfaces": [
            {
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg4015/providers/Microsoft.Network/networkInterfaces/azsmnet2321"
            }
          ]
        }
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg4015/providers/Microsoft.Network/networkInterfaces/azsmnet2321?api-version=2018-11-01",
      "RequestMethod": "DELETE",
      "RequestHeaders": {
        "Authorization": "Sanitized",
        "traceparent": "00-6190db6eb42f72032f6961cc6db28195-603ce2eff45def62-00",
        "User-Agent": "azsdk-net-ResourceManager.Network/1.3.0-alpha.20230627.1 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "36662f2d6cf1f2bc730b3281dee1f249",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Azure-AsyncNotification": "Enabled",
        "Azure-AsyncOperation": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/providers/Microsoft.Network/locations/westus/operations/d664b5a3-a4fe-4223-a78c-84cdbddc9d7e?api-version=2018-11-01",
        "Cache-Control": "no-cache",
        "Content-Length": "0",
        "Date": "Wed, 28 Jun 2023 15:30:55 GMT",
        "Expires": "-1",
        "Location": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/providers/Microsoft.Network/locations/westus/operationResults/d664b5a3-a4fe-4223-a78c-84cdbddc9d7e?api-version=2018-11-01",
        "Pragma": "no-cache",
        "Retry-After": "4",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "561c8d8d-0746-46ad-addf-d7de39cb983a",
        "x-ms-client-request-id": "36662f2d6cf1f2bc730b3281dee1f249",
        "x-ms-correlation-request-id": "df5d397d-e9c1-4ea1-b989-1423a70c23b3",
        "x-ms-ratelimit-remaining-subscription-deletes": "14886",
        "x-ms-request-id": "d664b5a3-a4fe-4223-a78c-84cdbddc9d7e",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T153055Z:df5d397d-e9c1-4ea1-b989-1423a70c23b3"
      },
      "ResponseBody": null
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/providers/Microsoft.Network/locations/westus/operations/d664b5a3-a4fe-4223-a78c-84cdbddc9d7e?api-version=2018-11-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Authorization": "Sanitized",
        "traceparent": "00-6190db6eb42f72032f6961cc6db28195-05c279687fe3bc53-00",
        "User-Agent": "azsdk-net-ResourceManager/1.6.0 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "178fb60271752f0359a37866cae5e30f",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "29",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:30:55 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "3d1b67a5-82f0-46cb-b092-65c8be5b65fb",
        "x-ms-client-request-id": "178fb60271752f0359a37866cae5e30f",
        "x-ms-correlation-request-id": "21a5c7af-ee9d-4934-945d-2b8f46bf57d1",
        "x-ms-ratelimit-remaining-subscription-reads": "11070",
        "x-ms-request-id": "13f41e6d-7015-43c2-9c46-3ed63548eebf",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T153055Z:21a5c7af-ee9d-4934-945d-2b8f46bf57d1"
      },
      "ResponseBody": {
        "status": "Succeeded"
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg4015/providers/Microsoft.Network/networkInterfaces?api-version=2018-11-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "User-Agent": "azsdk-net-ResourceManager.Network/1.3.0-alpha.20230627.1 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "5c1958408a2a3bea407ba3dde0aac5c5",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "12",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:30:55 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-correlation-request-id": "4ecb6d1b-c985-4b88-9d3e-0ed0593f4081",
        "x-ms-ratelimit-remaining-subscription-reads": "11069",
        "x-ms-request-id": "4ecb6d1b-c985-4b88-9d3e-0ed0593f4081",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T153055Z:4ecb6d1b-c985-4b88-9d3e-0ed0593f4081"
      },
      "ResponseBody": {
        "value": []
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg4015/providers/Microsoft.Network/networkSecurityGroups/azsmnet6427?api-version=2023-02-01",
      "RequestMethod": "DELETE",
      "RequestHeaders": {
        "Authorization": "Sanitized",
        "traceparent": "00-71fe7589f23cbc8955307edce5097741-ba1a80b7b7434946-00",
        "User-Agent": "azsdk-net-ResourceManager.Network/1.3.0-alpha.20230627.1 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "277f1813db5203d43119a03c798820ad",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 202,
      "ResponseHeaders": {
        "Azure-AsyncNotification": "Enabled",
        "Azure-AsyncOperation": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/providers/Microsoft.Network/locations/westus/operations/6a955ee8-a2a8-4d39-a744-b0d030c39373?api-version=2023-02-01",
        "Cache-Control": "no-cache",
        "Content-Length": "0",
        "Date": "Wed, 28 Jun 2023 15:30:56 GMT",
        "Expires": "-1",
        "Location": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/providers/Microsoft.Network/locations/westus/operationResults/6a955ee8-a2a8-4d39-a744-b0d030c39373?api-version=2023-02-01",
        "Pragma": "no-cache",
        "Retry-After": "1",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "74410a16-d927-4cd1-8083-e5054171169c",
        "x-ms-client-request-id": "277f1813db5203d43119a03c798820ad",
        "x-ms-correlation-request-id": "a502474b-6a97-4564-9ae8-3ec0830e47d7",
        "x-ms-ratelimit-remaining-subscription-deletes": "14885",
        "x-ms-request-id": "6a955ee8-a2a8-4d39-a744-b0d030c39373",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T153056Z:a502474b-6a97-4564-9ae8-3ec0830e47d7"
      },
      "ResponseBody": null
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/providers/Microsoft.Network/locations/westus/operations/6a955ee8-a2a8-4d39-a744-b0d030c39373?api-version=2023-02-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Authorization": "Sanitized",
        "traceparent": "00-71fe7589f23cbc8955307edce5097741-0d9a6c765cc3ae1c-00",
        "User-Agent": "azsdk-net-ResourceManager/1.6.0 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "b252b2debb6665bd84152a11e9aec2b7",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "22",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:30:56 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "7e63bdba-9a03-4403-9800-9b672ceabd69",
        "x-ms-client-request-id": "b252b2debb6665bd84152a11e9aec2b7",
        "x-ms-correlation-request-id": "ad5c9977-dbca-47d9-a559-64e1f7139ee2",
        "x-ms-ratelimit-remaining-subscription-reads": "11068",
        "x-ms-request-id": "cf416e3d-46e8-4e94-bea0-26858528b4e0",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T153056Z:ad5c9977-dbca-47d9-a559-64e1f7139ee2"
      },
      "ResponseBody": {
        "status": "Succeeded"
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg4015/providers/Microsoft.Network/virtualNetworks/azsmnet8067?api-version=2023-02-01",
      "RequestMethod": "DELETE",
      "RequestHeaders": {
        "Authorization": "Sanitized",
        "traceparent": "00-e5460129d67157789151cc1d6557e852-b737df8b5b6661b7-00",
        "User-Agent": "azsdk-net-ResourceManager.Network/1.3.0-alpha.20230627.1 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "64acf65bf1d8783028065cff03da360b",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 202,
      "ResponseHeaders": {
        "Azure-AsyncNotification": "Enabled",
        "Azure-AsyncOperation": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/providers/Microsoft.Network/locations/westus/operations/33b4b32e-da59-4337-97ef-939610a519a4?api-version=2023-02-01",
        "Cache-Control": "no-cache",
        "Content-Length": "0",
        "Date": "Wed, 28 Jun 2023 15:30:57 GMT",
        "Expires": "-1",
        "Location": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/providers/Microsoft.Network/locations/westus/operationResults/33b4b32e-da59-4337-97ef-939610a519a4?api-version=2023-02-01",
        "Pragma": "no-cache",
        "Retry-After": "10",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "c675ebd3-4478-4788-bd70-0e9061c1ca0e",
        "x-ms-client-request-id": "64acf65bf1d8783028065cff03da360b",
        "x-ms-correlation-request-id": "ff090a0a-8bdf-43b0-bfdd-b8158e820482",
        "x-ms-ratelimit-remaining-subscription-deletes": "14884",
        "x-ms-request-id": "33b4b32e-da59-4337-97ef-939610a519a4",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T153057Z:ff090a0a-8bdf-43b0-bfdd-b8158e820482"
      },
      "ResponseBody": null
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/providers/Microsoft.Network/locations/westus/operations/33b4b32e-da59-4337-97ef-939610a519a4?api-version=2023-02-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Authorization": "Sanitized",
        "traceparent": "00-e5460129d67157789151cc1d6557e852-f230e0514170f100-00",
        "User-Agent": "azsdk-net-ResourceManager/1.6.0 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "d79d1f90e97aecd682d9895f5fbe61a9",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "22",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:30:57 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "6d26e177-8252-4b2c-b6f9-0eebee031ade",
        "x-ms-client-request-id": "d79d1f90e97aecd682d9895f5fbe61a9",
        "x-ms-correlation-request-id": "24903240-d73a-4a69-a2a2-7c6d7728f88f",
        "x-ms-ratelimit-remaining-subscription-reads": "11067",
        "x-ms-request-id": "fab26f4c-c664-44d4-a2b4-45c407193d7f",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T153057Z:24903240-d73a-4a69-a2a2-7c6d7728f88f"
      },
      "ResponseBody": {
        "status": "Succeeded"
      }
    }
  ],
  "Variables": {
    "AZURE_AUTHORITY_HOST": "https://login.microsoftonline.com",
    "LOCATION": "westus",
    "RandomSeed": "304050229",
    "RESOURCE_MANAGER_URL": null,
    "SUBSCRIPTION_ID": "db1ab6f0-4769-4b27-930e-01e2ef9c123c"
  }
}
